[package]
name = "fibonacci_guru"
version = "1.0.1"
edition = "2021"
authors = ["Dallin Hutchison"]
license = "MIT OR Apache-2.0"
description = "A tool to calculate the nth term of the fibonacci sequence. It can calculate terms that are well above 128 bits and will keep track of how long the calculation cost. This tool provides access to a dynamic programming implementation as well as recursive implementation."
readme = "README.md"
homepage = "https://github.com/WhaleCoded/fibonacci_guru"
repository = "https://github.com/WhaleCoded/fibonacci_guru"
keywords = ["cli", "fibonacci"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.34.0"
thiserror = "1.0"
chrono = "0.4.19"
num-bigint = "0.4"